DCO: Servicio getMovementsDetail
