# Project_SG_IB/ApiOperartions/Code/REST/COBISCorp.eCOBIS.ServiceContractOperations.Service.CWC/src/main/java/cobiscorp/ecobis/servicecontractoperations/service/IServiceContractOperationsApiService.java
@@ -39,6 +39,8 @@
     import   cobiscorp.ecobis.datacontractoperations.dto.RequestCatalog;
     import   cobiscorp.ecobis.datacontractoperations.dto.ResponseCatalog;
     import   cobiscorp.ecobis.datacontractoperations.dto.CatalogueItems;
+    import   cobiscorp.ecobis.datacontractoperations.dto.RequestGetMovementsDetail;
+    import   cobiscorp.ecobis.datacontractoperations.dto.ResponseGetMovementsDetail;
     import   cobiscorp.ecobis.datacontractoperations.dto.RequestOwnAccountsView;
     import   cobiscorp.ecobis.datacontractoperations.dto.ResponseOwnAccountsView;
     import   cobiscorp.ecobis.datacontractoperations.dto.AccountsArray;
@@ -115,6 +117,12 @@ import   cobiscorp.ecobis.datacontractoperations.dto.ListZipCode;
         
 			//Have DTO
 			public ResponseCatalog getCatalog(RequestCatalog inRequestCatalog  )throws CTSRestException;
+          /**
+          * Service to obtain the detail of movements of an existing savings account
+          */
+        
+			//Have DTO
+			public ResponseGetMovementsDetail getMovementsDetail(RequestGetMovementsDetail inRequestGetMovementsDetail  )throws CTSRestException;
           /**
           * Get Own Accounts View
           */
