# Project_SG_IB/ApiOperartions/yaml/swagger/unficado/ApiWaltMart.yaml
@@ -320,6 +320,35 @@ paths:
                 $ref: '#/components/schemas/ResponseOwnAccountsView'
       security:
       - bearerAuth: []
+  apiOperations/accounts/getMovementsDetail:
+    post:
+      tags:
+      - Get Movements Detail
+      summary: Service to obtain the detail of movements of an existing savings account
+      operationId: getMovementsDetail
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RequestGetMovementsDetail'
+        required: true
+      responses:
+        "400":
+          description: The data sent is incorrect or corrupted
+        "500":
+          description: An error occurred on the server
+        "401":
+          description: Unauthorized service
+        "403":
+          description: The request has been denied.
+        "200":
+          description: Saving Account
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ResponseGetMovementsDetail'
+      security:
+      - bearerAuth: []      
 components:
   schemas:
     Message:
@@ -1338,7 +1367,191 @@ components:
           type: string
           description: Interbank key
           example: "646180283000000020"
-          
+
+    RequestGetMovementsDetail:
+      required:
+      - externalCustomerId
+      - numberOfMovements
+      - productNumber
+      type: object
+      properties:
+        externalCustomerId:
+          maxLength: 12
+          type: integer
+          description: External Customer Id
+          example: 220
+        accountNumber:
+          maxLength: 20
+          minLength: 1
+          type: string
+          description: Savings account number
+          example: "03000000027"
+        numberOfMovements:
+          maxLength: 2
+          minLength: 1
+          type: integer
+          description: Number of records to orbare at a time
+          example: 5
+        minDate:
+          maxLength: 10
+          minLength: 10
+          type: string
+          description: Minimum date to obtain movements  MM-dd-yyyy if is empity or null is omited
+          format: date
+          example: 0006-06-13
+        maxDate:
+          maxLength: 10
+          minLength: 10
+          type: string
+          description: Maximum date to obtain movements MM-dd-yyyy if is empity or null is omited
+          format: date
+          example: 0006-07-14
+        sequential:
+          maxLength: 10
+          minLength: 1
+          type: integer
+          description: Specific page sequential to get
+          example: 48
+        movementId:
+          maxLength: 32
+          minLength: 1
+          type: integer
+          description: get specific id movement (using Unique Sequential)
+          example: 1
+      description: Parameters required for the execution of the service
+    ResponseGetMovementsDetail:
+      properties:
+        success:
+          type: boolean
+          description: result process
+          example: true
+        message:
+          $ref: '#/components/schemas/Message'
+        numberOfResults:
+          maxLength: 3
+          minLength: 1
+          type: integer
+          description: Number of results
+          example: 5
+        accountStatementArray:
+          type: array
+          items:
+            $ref: '#/components/schemas/AccountStatementArray'
+      description: Response object sent from the service
+    AccountStatementArray:
+      type: object
+      properties:
+        accountingBalance:
+          type: number
+          description: Balance account
+          example: 25.12
+        alternateCode:
+          type: integer
+          description: Alternative code
+          example: 5
+        amount:
+          type: number
+          description: Amount movement
+          example: 25.12
+        availableBalance:
+          type: number
+          description: Balance amount
+          example: 352.1
+        concept:
+          maxLength: 40
+          type: string
+          description: Concept movement
+          example: My transfer
+        description:
+          maxLength: 40
+          type: string
+          description: Description of movement
+          example: TRANSFERENCIASPEI ENVIADA
+        documentNumber:
+          type: integer
+          description: Number document
+          example: 0
+        hour:
+          maxLength: 10
+          type: string
+          description: Movement hour
+          example: 12:00
+        image:
+          maxLength: 10
+          type: string
+          description: Image movement
+          example: "N"
+        tracking:
+          maxLength: 40
+          type: string
+          description: Traking id for movement spei
+          example: TRF2022093097056908
+        operationType:
+          maxLength: 5
+          type: string
+          description: Id type operation
+          example: "264"
+        reference:
+          type: integer
+          description: Id reference
+          example: 249
+        sequential:
+          type: integer
+          description: Number sequential operation
+          example: 2554552
+        signDC:
+          maxLength: 1
+          type: string
+          description: Type operation. C = Credit. D = Debit
+          example: D
+        transactionDate:
+          maxLength: 10
+          type: string
+          description: Date transaction
+          example: 30/09/2022
+        uniqueSequential:
+          type: integer
+          description: Id list movements
+          example: 3
+        processDate:
+          maxLength: 10
+          type: string
+          description: Process date movement
+          example: 30/09/2022
+        tarjetNumber:
+          maxLength: 20
+          type: string
+          description: Number of tarje
+          example: "452154547865841000"
+        destinyAccount:
+          maxLength: 20
+          type: string
+          description: Destiny account
+          example: "5568576731"
+        typeAccount:
+          maxLength: 40
+          type: string
+          description: Type account destiny
+          example: BBVA BANCOMER
+        beneficiary:
+          maxLength: 40
+          type: string
+          description: Beneficiary name
+          example: carlos olmos
+        referenceNumber:
+          type: integer
+          description: Number of reference
+          example: 838383
+        commission:
+          type: number
+          description: Commission amount
+          example: 4.5
+        iva:
+          type: number
+          description: IVA amount
+          example: 0.72
+      description: Description of the transactions carried out by the client
+      
   responses:
     Unauthorized:
       description: Unauthorized service
